# earthorbits

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  run.sh
.github/workflows/: clang-tidy.yml  clang-tools.yml  cppcheck.yml  googletest.yml  pre-commit.yml  suppressions.txt
cmake/: AddDate.cmake  AddFmt.cmake  AddGoogleBenchmark.cmake  AddGoogleTest.cmake  EarthorbitsDefines.cmake  EarthorbitsOptions.cmake
include/earthorbits/: earthorbits.h  parsetle.h
src/: CMakeLists.txt  constants.h  earthorbits.cpp  eobmath.h  jdate.h  parsetle.cpp
tests/: CMakeLists.txt  benchmarks.cpp  main.cpp
